@startuml
'https://plantuml.com/class-diagram

'!define DARKBLUE
'!include https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml
!define CLASSCOMMENT(x) <color:white>x</color>
!define COMMENT(x) <color:blue>x</color>

 interface TVState {
    setOn(TV tv);
    setOff(TV tv);
    showState();
}

 class TVStateOff {
    setOn(TV tv);  COMMENT(tv.setState(new TVStateOn()); )
    setOff(TV tv);  COMMENT(No state change);
    showState();  COMMENT("Writes:TV is turned OFF");
}

 class TVStateOn {
    setOn(TV tv);  COMMENT(No state change);
    setOff(TV tv);  COMMENT(tv.setState(new TVStateOff()); )
    showState();  COMMENT("Writes:TV is turned ON");
}

 class TV {
    TVState state
     setState(TVState state) COMMENT(this.state=state)
    setOn();   COMMENT(state.setOn(this);)
    setOff();  COMMENT(state.setOff(this);)
    showState();
}

TVState <|-- TVStateOn
TVState <|-- TVStateOff

@enduml